[fix] Adjust Moodle Integration of CompareTextTask to the other Addons